feat: new firebase service and production settings config in settings.py

--- a/.gitignore
+++ b/.gitignore
@@ -263,6 +263,9 @@ poetry.toml
 # LSP config files
 pyrightconfig.json
 
+# Firebase Credentials
+firebase_credentials.json
+
 # End of https://www.toptal.com/developers/gitignore/api/python,django
 
 # Generated using ignr.py - github.com/Antrikshy/ignr.py
