--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,9 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "django>=5.2.6",
+    "firebase-admin>=7.1.0",
     "pillow>=11.3.0",
+    "python-decouple>=3.8",
 ]
 
 [dependency-groups]
