--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "django>=5.2.6",
     "firebase-admin>=7.1.0",
+    "google-genai>=1.39.1",
     "pillow>=11.3.0",
     "python-decouple>=3.8",
 ]
