--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "django>=5.2.6",
     "firebase-admin>=7.1.0",
     "google-genai>=1.39.1",
+    "markdown>=3.9",
     "pillow>=11.3.0",
     "python-decouple>=3.8",
 ]
