--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "django>=5.2.6",
+    "django-redis>=6.0.0",
     "firebase-admin>=7.1.0",
     "google-genai>=1.39.1",
     "markdown>=3.9",
