--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,8 +42,9 @@ lint = 'ruff check'
 pre_format = 'ruff check --fix'
 format = 'ruff format'
 
-pre_run = 'task format'
+pre_run = 'task format && docker-compose up --build -d'
 run = 'python manage.py runserver'
+post_run = 'docker-compose stop && docker-compose down -v'
 
 pre_migrate = 'python manage.py makemigrations'
 migrate = 'python manage.py migrate'
