--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,16 @@ services:
       - redis_data:/data
     ports:
       - 6379:6379
+  
+  web:
+    build: .
+    container_name: weave
+    volumes:
+      - .:/code
+    ports:
+      - "8000:8000"
+    depends_on:
+      - redis
 
 volumes:
   redis_data:
