--- a/secrets/.env.example
+++ b/secrets/.env.example
@@ -1,5 +1,16 @@
+# Django
 SECRET_KEY=example
 DEBUG=example
 ALLOWED_HOSTS=example
+
+# Google
 FIREBASE_DATABASE_URL=example
-GEMINI_API_KEY=example
+GEMINI_API_KEY=
+
+# Postgres
+POSTGRES_DB=example
+POSTGRES_USER=example
+POSTGRES_PASSWORD=example
+POSTGRES_HOST=example
+POSTGRES_PORT=example
+DATABASE_URL=example
