--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Weave é uma rede social para a comunidade de tecnologia, inspira
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "dj-database-url>=3.0.1",
     "django>=5.2.6",
     "django-redis>=6.0.0",
     "firebase-admin>=7.1.0",
