fix: routes for docs/

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,11 @@
 site_name: Weave
 repo_url: https://github.com/matheusfabiao/weave
 repo_name: matheusfabiao/weave
-edit_uri: tree/main/docs
+edit_uri: tree/main/
+site_url: http://localhost:8000/docs/
+use_directory_urls: false
+docs_dir: docs
+site_dir: docs_build
 
 nav:
   - Início: index.md
@@ -32,5 +36,3 @@ markdown_extensions:
       anchor_linenums: true
       linenums: false
   - pymdownx.superfences
-
-use_directory_urls: false
